add acteur + real

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <ul>
         <li><a href="acteur.html">Gestion des Acteurs</a></li>
-        <li><a href="directors.html">Gestion des Réalisateurs</a></li>
-        <li><a href="films.html">Gestion des Films</a></li>
+        <li><a href="real.html">Gestion des Réalisateurs</a></li>
+        <li><a href="film.html">Gestion des Films</a></li>
     </ul>
 </body>
 </html>
